maze.lessons.maze.island.IslandMaze.scala.error
Escaper:13: error: ')' expected but 'else' found.
  else if (d == Direction.EAST) {
  ^